Worked on the second section

--- a/index.htm
+++ b/index.htm
@@ -33,13 +33,51 @@
             /></a>
           </nav>
           <div class="header__icon-c-wrapprer">
+            <a href="#"
+              ><img
+                class="header__link-mobile"
+                src="./icons/icon-a.png"
+                alt="icon"
+            /></a>
+            <a href="#"
+              ><img
+                class="header__link-mobile"
+                class="header__link-mobile"
+                src="./icons/icon-b.png"
+                alt="icon"
+            /></a>
             <img
               class="header__icon-c"
-              width="12"
               height="10"
               src="./icons/icon-c.png"
               alt="icon"
             />
+          </div>
+        </div>
+      </section>
+
+      <div class="mobileMenu">
+        <nav class="mobileMenu__navlink">
+          <a class="mobileMenu__link" href="#">Home</a>
+          <a class="mobileMenu__link" href="#">Product</a>
+          <a class="mobileMenu__link" href="#">Pricing</a>
+          <a class="mobileMenu__link" href="#">Contact</a>
+        </nav>
+      </div>
+      <section class="intro">
+        <div class="intro__description">
+          <h1 class="intro__title">
+            Experts are here to solve your business problem
+          </h1>
+          <p class="intro__sentence">
+            We know how large the objects will act, but things on a small scale
+            just do not act that way.
+          </p>
+          <div class="intro__btn-container">
+            <div class="intro__btn-wrapper">
+              <button class="intro__btn-yellow-bg">Get Quote Now</button>
+              <button class="intro__btn-blue-border">Learn More</button>
+            </div>
           </div>
         </div>
       </section>
