Work on the second and third section

--- a/index.htm
+++ b/index.htm
@@ -82,5 +82,482 @@
         </div>
       </section>
     </header>
+
+    <section class="services">
+      <section class="intro">
+        <div class="intro__description">
+          <h2 class="intro__title intro__title--font-size">WHY CHOOSE US</h2>
+          <p class="intro__sentence">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanic.
+          </p>
+        </div>
+      </section>
+      <section class="services__service-container">
+        <div class="services__content-wrapper">
+          <div class="services__items">
+            <div class="services__item-header">
+              <img
+                width="28"
+                class="services__icon"
+                src="./icons/icon-i.png"
+                alt="service-icon"
+              />
+              <h4 class="services__title">Digital marketing</h4>
+            </div>
+            <p class="services__item-descr">
+              the quick fox jumps over the lazy dog the quick fox jumps over the
+              lazy dog
+            </p>
+          </div>
+          <div class="services__items">
+            <div class="services__item-header">
+              <img
+                width="28"
+                class="services__icon"
+                src="./icons/icon-ii.png"
+                alt="service-icon"
+              />
+              <h4 class="services__title">Digital marketing</h4>
+            </div>
+            <p class="services__item-descr">
+              the quick fox jumps over the lazy dog the quick fox jumps over the
+              lazy dog
+            </p>
+          </div>
+          <div class="services__items">
+            <div class="services__item-header">
+              <img
+                width="28"
+                class="services__icon"
+                src="./icons/icon-iii.png"
+                alt="service-icon"
+              />
+              <h4 class="services__title">Business Growing</h4>
+            </div>
+            <p class="services__item-descr">
+              the quick fox jumps over the lazy dog the quick fox jumps over the
+              lazy dog
+            </p>
+          </div>
+          <div class="services__items">
+            <div class="services__item-header">
+              <img
+                width="28"
+                class="services__icon"
+                src="./icons/icon-iv.png"
+                alt="service-icon"
+              />
+              <h4 class="services__title">National top 50 firms</h4>
+            </div>
+            <p class="services__item-descr">
+              the quick fox jumps over the lazy dog the quick fox jumps over the
+              lazy dog
+            </p>
+          </div>
+          <div class="services__items">
+            <div class="services__item-header">
+              <img
+                width="28"
+                class="services__icon"
+                src="./icons/icon-v.png"
+                alt="service-icon"
+              />
+              <h4 class="services__title">National top 50 firms</h4>
+            </div>
+            <p class="services__item-descr">
+              the quick fox jumps over the lazy dog the quick fox jumps over the
+              lazy dog
+            </p>
+          </div>
+          <div class="services__items">
+            <div class="services__item-header">
+              <img
+                width="28"
+                class="services__icon"
+                src="./icons/icon-vi.png"
+                alt="service-icon"
+              />
+              <h4 class="services__title">Web Development</h4>
+            </div>
+            <p class="services__item-descr">
+              the quick fox jumps over the lazy dog the quick fox jumps over the
+              lazy dog
+            </p>
+          </div>
+        </div>
+      </section>
+    </section>
+
+    <section class="business-service">
+      <section class="business-service__descr">
+        <section class="intro">
+          <div class="intro__description">
+            <h2 class="intro__title intro__title--font-size">
+              We provide the best business service
+            </h2>
+            <p class="intro__sentence">
+              Problems trying to resolve the conflict between the two major
+              realms of Classical physics: Newtonian mechanic.
+            </p>
+          </div>
+        </section>
+      </section>
+      <section class="business-service__blue-bg">
+        <section class="business-service__intro">
+          <div class="business-service__description">
+            <h2 class="business-service__title">
+              We provide the best business service
+            </h2>
+            <p class="business-service__sentence">
+              Problems trying to resolve the conflict between the two major
+              realms of Classical physics: Newtonian mechanic.
+            </p>
+          </div>
+        </section>
+      </section>
+      <img
+        class="business-service__image"
+        src="./images/image-i.png"
+        alt="meeting room picture"
+      />
+    </section>
+
+    <section class="client-section">
+      <section class="intro">
+        <div class="intro__description">
+          <h2 class="intro__title intro__title--font-size">What Clients Say</h2>
+          <p class="intro__sentence">
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanic.
+          </p>
+        </div>
+      </section>
+      <div class="client-section__cards-container">
+        <div class="client-section__card">
+          <div class="client-section__stars-wrapper">
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-border.png"
+              alt="bordered stars"
+            />
+          </div>
+          <p class="client-section__descr">
+            Slate helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+          <div class="client-section__identity">
+            <img width="40" src="./images/profile-i.png" alt="client profile" />
+            <div class="client-section__names-wrapper">
+              <h5 class="client-section__names">Regina Miles</h5>
+              <h5 class="client-section__profession">Designer</h5>
+            </div>
+          </div>
+        </div>
+        <div class="client-section__card">
+          <div class="client-section__stars-wrapper">
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-border.png"
+              alt="bordered stars"
+            />
+          </div>
+          <p class="client-section__descr">
+            Slate helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+          <div class="client-section__identity">
+            <img
+              width="40"
+              src="./images/profile-ii.png"
+              alt="client profile"
+            />
+            <div class="client-section__names-wrapper">
+              <h5 class="client-section__names">Regina Miles</h5>
+              <h5 class="client-section__profession">Designer</h5>
+            </div>
+          </div>
+        </div>
+        <div class="client-section__card">
+          <div class="client-section__stars-wrapper">
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-full.png"
+              alt="full stars"
+            />
+            <img
+              class="client-section__star"
+              width="15"
+              src="./icons/star-border.png"
+              alt="bordered stars"
+            />
+          </div>
+          <p class="client-section__descr">
+            Slate helps you see how many more days you need to work to reach
+            your financial goal.
+          </p>
+          <div class="client-section__identity">
+            <img
+              width="40"
+              src="./images/profile-iii.png"
+              alt="client profile"
+            />
+            <div class="client-section__names-wrapper">
+              <h5 class="client-section__names">Regina Miles</h5>
+              <h5 class="client-section__profession">Designer</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="intro">
+      <div class="intro__description">
+        <h2 class="intro__title intro__title--font-size">What Clients Say</h2>
+        <p class="intro__sentence">
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanic.
+        </p>
+      </div>
+    </section>
+    <section class="team-cards">
+      <div class="team-cards__member-wrapper">
+        <div class="team-cards__member">
+          <div class="team-cards__image-wrapper">
+            <img
+              class="team-cards__image"
+              src="./images/card-i.png"
+              alt="first member"
+            />
+          </div>
+        </div>
+        <div class="team-cards__member-info">
+          <div class="team-cards__member-name-wrapper">
+            <h5 class="team-cards__member-name">Julian Jameson</h5>
+          </div>
+          <div class="team-cards__member-role-wrapper">
+            <p class="team-cards__member-role">Profession</p>
+          </div>
+          <div class="team-cards__icons-wrapper">
+            <a class="team-cards__icon" href="#"
+              ><img
+                class="team-cards__icon-image"
+                width="15"
+                src="./icons/card-fb.png"
+                alt="facebook"
+            /></a>
+            <a class="team-cards__icon" href="#"
+              ><img
+                class="team-cards__icon-image"
+                width="14"
+                src="./icons/card-insta.png"
+                alt="facebook"
+            /></a>
+            <a class="team-cards__icon" href="#"
+              ><img
+                class="team-cards__icon-image"
+                width="15"
+                src="./icons/card-twt.png"
+                alt="facebook"
+            /></a>
+          </div>
+        </div>
+      </div>
+      <div class="team-cards__member-wrapper">
+        <div class="team-cards__member">
+          <div class="team-cards__image-wrapper">
+            <img
+              class="team-cards__image"
+              src="./images/card-ii.png"
+              alt="first member of the team"
+            />
+          </div>
+        </div>
+        <div class="team-cards__member-info">
+          <div class="team-cards__member-name-wrapper">
+            <h5 class="team-cards__member-name">Julian Jameson</h5>
+          </div>
+          <div class="team-cards__member-role-wrapper">
+            <p class="team-cards__member-role">Profession</p>
+          </div>
+          <div class="team-cards__icons-wrapper">
+            <a class="team-cards__icon" href="#"
+              ><img
+                class="team-cards__icon-image"
+                width="15"
+                src="./icons/card-fb.png"
+                alt="facebook"
+            /></a>
+            <a class="team-cards__icon" href="#"
+              ><img
+                class="team-cards__icon-image"
+                width="14"
+                src="./icons/card-insta.png"
+                alt="facebook"
+            /></a>
+            <a class="team-cards__icon" href="#"
+              ><img
+                class="team-cards__icon-image"
+                width="15"
+                src="./icons/card-twt.png"
+                alt="facebook"
+            /></a>
+          </div>
+        </div>
+      </div>
+      <div class="team-cards__member-wrapper">
+        <div class="team-cards__member">
+          <div class="team-cards__image-wrapper">
+            <img
+              class="team-cards__image"
+              src="./images/card-iii.png"
+              alt="first member"
+            />
+          </div>
+        </div>
+        <div class="team-cards__member-info">
+          <div class="team-cards__member-name-wrapper">
+            <h5 class="team-cards__member-name">Julian Jameson</h5>
+          </div>
+          <div class="team-cards__member-role-wrapper">
+            <p class="team-cards__member-role">Profession</p>
+          </div>
+          <div class="team-cards__icons-wrapper">
+            <a class="team-cards__icon" href="#"
+              ><img
+                class="team-cards__icon-image"
+                width="15"
+                src="./icons/card-fb.png"
+                alt="facebook"
+            /></a>
+            <a class="team-cards__icon" href="#"
+              ><img
+                class="team-cards__icon-image"
+                width="14"
+                src="./icons/card-insta.png"
+                alt="facebook"
+            /></a>
+            <a class="team-cards__icon" href="#"
+              ><img
+                class="team-cards__icon-image"
+                width="15"
+                src="./icons/card-twt.png"
+                alt="facebook"
+            /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact">
+      <img
+        class="contact__bg"
+        src="./images/image-ii.png"
+        alt="contact background"
+      />
+      <div class="contact__intro">
+        <h6 class="contact__small-title">Contact Us</h6>
+        <h2 class="contact__title">Make an Appointment</h2>
+        <form class="contact__form" action="appointment">
+          <div class="contact__personnal-info">
+            <input class="contact__input" placeholder="Full Name" type="text" />
+            <input
+              class="contact__input"
+              placeholder="example@gmail.com"
+              type="email"
+            />
+            <select class="contact__selector" name="cars">
+              <option value="volvo">Please Select</option>
+              <option value="saab">Warehouse</option>
+              <option value="fiat">Office</option>
+              <option value="audi">Home</option>
+            </select>
+            <select class="contact__selector" name="cars">
+              <option value="volvo">4:00 Available</option>
+              <option value="saab">5:00</option>
+              <option value="fiat">6:00</option>
+              <option value="audi">9:00</option>
+            </select>
+          </div>
+          <div>
+            <input
+              class="contact__textarea"
+              placeholder="Message"
+              type="text"
+            />
+          </div>
+          <button class="contact__submit-btn">Book Appointment</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
