Working on the last section

--- a/index.htm
+++ b/index.htm
@@ -559,5 +559,134 @@
         </form>
       </div>
     </section>
+    <section class="contact-us">
+      <div class="contact-us__descr-wrapper">
+        <div class="contact-us__descr">
+          <h3 class="contact-us__descr-title">
+            Consulting Agency For Your Business
+          </h3>
+          <p>the quick jumps over lazy dog</p>
+        </div>
+        <button class="contact__submit-btn">Contact Us</button>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__header-wrapper">
+        <div class="footer__header">
+          <h3 class="footer__logo">KMarketer</h3>
+          <div class="footer__icon-content">
+            <img
+              width="20"
+              class="footer__icons"
+              src="./icons/foot-fb.png"
+              alt="footer icons"
+            />
+            <img
+              width="20"
+              class="footer__icons"
+              src="./icons/foot-insta.png"
+              alt="footer icons"
+            />
+            <img
+              width="20"
+              class="footer__icons"
+              src="./icons/foot-twt.png"
+              alt="footer icons"
+            />
+            <img
+              width="30"
+              height="20"
+              class="footer__icons"
+              src="./icons/foot-yt.png"
+              alt="footer icons"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="footer__header-wrapper">
+        <div class="footer__header footer__header--between">
+          <div class="footer__info-links-wrapper">
+            <ul class="footer__info-links">
+              <li class="footer__list">
+                <h3 class="footer__links-title">Company Info</h3>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">About Us</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Carrier</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">We are hiring</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Blog</a>
+              </li>
+            </ul>
+            <ul class="footer__info-links">
+              <li class="footer__list">
+                <h3 class="footer__links-title">Legal</h3>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">About Us</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Carrier</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">We are hiring</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Blog</a>
+              </li>
+            </ul>
+            <ul class="footer__info-links">
+              <li class="footer__list">
+                <h3 class="footer__links-title">Features</h3>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Business Marketing</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">User Analytic</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Live Chat</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Unlimited support</a>
+              </li>
+            </ul>
+            <ul class="footer__info-links">
+              <li class="footer__list">
+                <h3 class="footer__links-title">Ressources</h3>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Ios & Android</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Watch a Demo</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">Customers</a>
+              </li>
+              <li class="footer__list">
+                <a class="footer__link" href="#">API</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__form-intro">
+            <h6 class="footer__form-title">Get In Touch</h6>
+            <form action="email">
+              <input class="footer__form-input" type="email" />
+              <button class="footer__form-btn" type="submit">Subscribe</button>
+              <p class="footer__form-sentence"></p>
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
