Working on the last section

--- a/index.htm
+++ b/index.htm
@@ -687,6 +687,11 @@
           </div>
         </div>
       </div>
+      <div class="footer__conclusion">
+        <p class="footer__last-sentence">
+          Made With Love By Figmaland All Right Reserved
+        </p>
+      </div>
     </footer>
   </body>
 </html>
