Finish the responsiveness part

--- a/index.htm
+++ b/index.htm
@@ -679,17 +679,19 @@
           </div>
           <div class="footer__form-intro">
             <h6 class="footer__form-title">Get In Touch</h6>
-            <form action="email">
+            <form class="footer__form" action="email">
               <input class="footer__form-input" type="email" />
               <button class="footer__form-btn" type="submit">Subscribe</button>
-              <p class="footer__form-sentence"></p>
             </form>
+            <p class="footer__form-sentence">
+              Cause we're the masters of our own fate.
+            </p>
           </div>
         </div>
       </div>
       <div class="footer__conclusion">
         <p class="footer__last-sentence">
-          Made With Love By Figmaland All Right Reserved
+          Made With Love By Figmaland All Right Reserved.
         </p>
       </div>
     </footer>
