Fix some acountered bugs

--- a/index.htm
+++ b/index.htm
@@ -84,10 +84,10 @@
     </header>
 
     <section class="services">
-      <section class="intro">
-        <div class="intro__description">
-          <h2 class="intro__title intro__title--font-size">WHY CHOOSE US</h2>
-          <p class="intro__sentence">
+      <section class="services__intro">
+        <div class="services__description">
+          <h2 class="services__main-title">WHY CHOOSE US</h2>
+          <p class="services__sentence">
             Problems trying to resolve the conflict between the two major realms
             of Classical physics: Newtonian mechanic.
           </p>
@@ -191,12 +191,12 @@
 
     <section class="business-service">
       <section class="business-service__descr">
-        <section class="intro">
-          <div class="intro__description">
-            <h2 class="intro__title intro__title--font-size">
+        <section class="business-service__intro">
+          <div class="business-service__intro-description">
+            <h2 class="business-service__title">
               We provide the best business service
             </h2>
-            <p class="intro__sentence">
+            <p class="business-service__sentence">
               Problems trying to resolve the conflict between the two major
               realms of Classical physics: Newtonian mechanic.
             </p>
@@ -204,12 +204,12 @@
         </section>
       </section>
       <section class="business-service__blue-bg">
-        <section class="business-service__intro">
+        <section class="business-service__transparent">
           <div class="business-service__description">
-            <h2 class="business-service__title">
+            <h2 class="business-service__title-trans">
               We provide the best business service
             </h2>
-            <p class="business-service__sentence">
+            <p class="business-service__sentence-trans">
               Problems trying to resolve the conflict between the two major
               realms of Classical physics: Newtonian mechanic.
             </p>
@@ -224,10 +224,10 @@
     </section>
 
     <section class="client-section">
-      <section class="intro">
-        <div class="intro__description">
-          <h2 class="intro__title intro__title--font-size">What Clients Say</h2>
-          <p class="intro__sentence">
+      <section class="client-section__intro">
+        <div class="client-section__description">
+          <h2 class="client-section__title">What Clients Say</h2>
+          <p class="client-section__sentence">
             Problems trying to resolve the conflict between the two major realms
             of Classical physics: Newtonian mechanic.
           </p>
@@ -380,10 +380,10 @@
       </div>
     </section>
 
-    <section class="intro">
-      <div class="intro__description">
-        <h2 class="intro__title intro__title--font-size">What Clients Say</h2>
-        <p class="intro__sentence">
+    <section class="team__intro">
+      <div class="team__description">
+        <h2 class="team__title">Meet our team</h2>
+        <p class="team__sentence">
           Problems trying to resolve the conflict between the two major realms
           of Classical physics: Newtonian mechanic.
         </p>
