Made changes according to the CR

--- a/index.htm
+++ b/index.htm
@@ -56,12 +56,12 @@
         </div>
       </section>
 
-      <div class="mobileMenu">
-        <nav class="mobileMenu__navlink">
-          <a class="mobileMenu__link" href="#">Home</a>
-          <a class="mobileMenu__link" href="#">Product</a>
-          <a class="mobileMenu__link" href="#">Pricing</a>
-          <a class="mobileMenu__link" href="#">Contact</a>
+      <div class="mobile-menu">
+        <nav class="mobile-menu__navlink">
+          <a class="mobile-menu__link" href="#">Home</a>
+          <a class="mobile-menu__link" href="#">Product</a>
+          <a class="mobile-menu__link" href="#">Pricing</a>
+          <a class="mobile-menu__link" href="#">Contact</a>
         </nav>
       </div>
       <section class="intro">
@@ -380,7 +380,7 @@
       </div>
     </section>
 
-    <section class="team__intro">
+    <section class="team">
       <div class="team__description">
         <h2 class="team__title">Meet our team</h2>
         <p class="team__sentence">
@@ -520,7 +520,7 @@
 
     <section class="contact">
       <img
-        class="contact__bg"
+        class="contact__image-bg"
         src="./images/image-ii.png"
         alt="contact background"
       />
@@ -536,16 +536,22 @@
               type="email"
             />
             <select class="contact__selector" name="cars">
-              <option value="volvo">Please Select</option>
-              <option value="saab">Warehouse</option>
-              <option value="fiat">Office</option>
-              <option value="audi">Home</option>
+              <option class="contact__form-option" value="volvo">
+                Please Select
+              </option>
+              <option class="contact__form-option" value="saab">
+                Warehouse
+              </option>
+              <option class="contact__form-option" value="fiat">Office</option>
+              <option class="contact__form-option" value="audi">Home</option>
             </select>
             <select class="contact__selector" name="cars">
-              <option value="volvo">4:00 Available</option>
-              <option value="saab">5:00</option>
-              <option value="fiat">6:00</option>
-              <option value="audi">9:00</option>
+              <option class="contact__form-option" value="volvo">
+                4:00 Available
+              </option>
+              <option class="contact__form-option" value="saab">5:00</option>
+              <option class="contact__form-option" value="fiat">6:00</option>
+              <option class="contact__form-option" value="audi">9:00</option>
             </select>
           </div>
           <div>
