--- a/index.htm
+++ b/index.htm
@@ -615,70 +615,70 @@
         <div class="footer__header footer__header--between">
           <div class="footer__info-links-wrapper">
             <ul class="footer__info-links">
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <h3 class="footer__links-title">Company Info</h3>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">About Us</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Carrier</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">We are hiring</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Blog</a>
               </li>
             </ul>
             <ul class="footer__info-links">
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <h3 class="footer__links-title">Legal</h3>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">About Us</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Carrier</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">We are hiring</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Blog</a>
               </li>
             </ul>
             <ul class="footer__info-links">
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <h3 class="footer__links-title">Features</h3>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Business Marketing</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">User Analytic</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Live Chat</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Unlimited support</a>
               </li>
             </ul>
             <ul class="footer__info-links">
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <h3 class="footer__links-title">Ressources</h3>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Ios & Android</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Watch a Demo</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">Customers</a>
               </li>
-              <li class="footer__list">
+              <li class="footer__list-item">
                 <a class="footer__link" href="#">API</a>
               </li>
             </ul>
