COrrected the project according to the CR

--- a/index.htm
+++ b/index.htm
@@ -573,7 +573,7 @@
           </h3>
           <p>the quick jumps over lazy dog</p>
         </div>
-        <button class="contact__submit-btn">Contact Us</button>
+        <button class="contact-us__submit-btn">Contact Us</button>
       </div>
     </section>
 
